<resources>
    <string name="app_name">PictureGame</string>
    <string name="app_title">Picture Game</string>
    <string name="enter_name_placeholder">Enter name</string>
    <string name="send_name_btn">Send</string>
    <string name="send_btn">Send</string>
    <string name="preference_file_key">picture_game_shared_prefs</string>
    <string name="add_new_room">Add New Room</string>
    <string name="room_name">Room name</string>
    <string name="add_room_btn">Add Room</string>
    <string name="placeholder">Loading</string>
    <string name="btn_start_game">Start Game</string>
    <string name="guess">Guess</string>
    <string name="give_up">Give Up</string>
    <string name="game_over">GAME OVER</string>
    <string name="scores_title">Here are the scores:</string>
    <string name="continue_text">Continue</string>
</resources>